2015-11-08  Ales Cepek  <cepek@gnu.org>

	* new release 1.17

	This is a maintainer's version introducing some basic functions
	for handling inconsistent systems (like right-handed coordinates
	with left-handed angles). Gama-local program solves this problem
	by internally changig signs of all Y coordinates, together with
	observed Y coordinates and Y differences (vectors).

	All y signed information is changed in the output. This works file
	for batch processing (gama-local) but fails in interactive
	dialogue environment of Qt based gama-q2 where all input
	information can be edited by user and changed signed Y coordinates
	(and observations) must be switched only once.

2015-07-25  Ales Cepek  <cepek@gnu.org>

	* fixed two bugs reported by Greg Troxel <gdt@lexort.com>
	** The bug with the tests is that they specify /bin/bash as the shell.
           POSIX does not require bash to be present.
	** Bad conditional in test for availability of xmllint parser.

2015-07-24  Ales Cepek  <cepek@gnu.org>

	* new release version 1.16

2015-05-22  Ales Cepek  <cepek@gnu.org>

	* 1.15j	fixed a bug in LocalNetwork class reported independently by
		Marek Peca <pecam1@fjfi.cvut.cz>
		Kolesár András <kolesar@openstreetmap.hu>
		Alex Shulg <alex-shulg@yandex.ru>

@@ -724,8 +724,8 @@ void LocalNetwork::project_equations()
               min_x_[n++] = p.index_z();
             }
         }
-      least_squares->min_x(min_n_, min_x_);
     }
+  least_squares->min_x(min_n_, min_x_);


2014-01-02  Ales Cepek  <cepek@gnu.org>

	* fixed a bug reported by Gabriel Gyori <gabriel.gyori@fsv.cvut.cz>
	  in the class LocalNetwork2sql

2013-11-06  Ales Cepek  <cepek@gnu.org>

	* fixed a bug reported by Dirk Falk in azimuth computations
	  ApproximateCoordinates fialed to solve azimuth-distance
	  combinatios in some cases

2013-06-06  Ales Cepek  <cepek@gnu.org>

	* Tae Wong <seotaewong40@gmail.com> contributed with thorough
	revision of accentuation of names in the GNU Gama
